DNN-9908 - Fix word-wrap space.

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PermissionGrid/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PermissionGrid/style.less
@@ -6,6 +6,7 @@
             .rw-list-option {
                 overflow: hidden;
                 text-overflow: ellipsis;
+                white-space: nowrap;
             }
         }
     }
